test/invalid/idl/no-semicolon-callback.webidl
callback interface NoSemicolon {
  void noSemiColon();
}

enum YouNeedOne {
  "really"
}
